added ConstructorBinding and Builder to BotConfig