@@ -19,6 +19,7 @@ import ru.obukhov.trader.trading.model.StrategyType;
 import ru.obukhov.trader.trading.strategy.interfaces.TradingStrategy;
 import ru.obukhov.trader.web.model.BotConfig;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.stream.Stream;
 
@@ -82,10 +83,11 @@ class TradingStrategyFactoryUnitTest {
 
     @ParameterizedTest
     @MethodSource("getData_forCreateStrategy_givesStrategyProperName")
-    void createStrategy_givesStrategyProperName(final StrategyType strategyType, final Map<String, Object> params, final String expectedName) {
-        final BotConfig botConfig = new BotConfig()
-                .setStrategyType(strategyType)
-                .setStrategyParams(params);
+    void createStrategy_givesStrategyProperName(final StrategyType strategyType, final Map<String, Object> strategyParams, final String expectedName) {
+        final BotConfig botConfig = BotConfig.builder()
+                .strategyType(strategyType)
+                .strategyParams(strategyParams)
+                .build();
         TradingStrategy strategy = factory.createStrategy(botConfig);
 
         Assertions.assertEquals(expectedName, strategy.getName());
@@ -282,12 +284,13 @@ class TradingStrategyFactoryUnitTest {
     @ParameterizedTest
     @MethodSource("getData_forCreateStrategy_throwsIllegalArgumentException_whenCross_andParamsAreNotValid")
     void createStrategy_throwsIllegalArgumentException_whenCross_andParamsAreNotValid(
-            final Map<String, Object> params,
+            final Map<String, Object> strategyParams,
             final String expectedMessage
     ) {
-        final BotConfig botConfig = new BotConfig()
-                .setStrategyType(StrategyType.CROSS)
-                .setStrategyParams(params);
+        final BotConfig botConfig = BotConfig.builder()
+                .strategyType(StrategyType.CROSS)
+                .strategyParams(strategyParams)
+                .build();
 
         final Executable executable = () -> factory.createStrategy(botConfig);
         Assertions.assertThrows(IllegalArgumentException.class, executable, expectedMessage);
@@ -295,7 +298,7 @@ class TradingStrategyFactoryUnitTest {
 
     @Test
     void createStrategy_throwsNoSuchBeanDefinitionException_whenCross_andNoAveragerBean() {
-        final Map<String, Object> params = Map.of(
+        final Map<String, Object> strategyParams = Map.of(
                 "movingAverageType", MovingAverageType.SIMPLE.getValue(),
                 "minimumProfit", 0.1,
                 "order", 1,
@@ -304,9 +307,10 @@ class TradingStrategyFactoryUnitTest {
                 "smallWindow", 3,
                 "bigWindow", 6
         );
-        final BotConfig botConfig = new BotConfig()
-                .setStrategyType(StrategyType.CROSS)
-                .setStrategyParams(params);
+        final BotConfig botConfig = BotConfig.builder()
+                .strategyType(StrategyType.CROSS)
+                .strategyParams(strategyParams)
+                .build();
 
         final String averagerName = MovingAverageType.SIMPLE.getAveragerName();
         Mockito.when(applicationContext.getBean(averagerName, MovingAverager.class))
@@ -321,9 +325,10 @@ class TradingStrategyFactoryUnitTest {
 
     @Test
     void createStrategy_throwsIllegalArgumentException_whenCross_andParamsAreEmpty() {
-        final BotConfig botConfig = new BotConfig()
-                .setStrategyType(StrategyType.CROSS)
-                .setStrategyParams(Map.of());
+        final BotConfig botConfig = BotConfig.builder()
+                .strategyType(StrategyType.CROSS)
+                .strategyParams(Collections.emptyMap())
+                .build();
 
         final Executable executable = () -> factory.createStrategy(botConfig);
         final IllegalArgumentException exception = Assertions.assertThrows(IllegalArgumentException.class, executable);
